--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 sudo: false
 language: elixir
+language: rust
 git:
   depth: 3
 env:
@@ -8,9 +9,6 @@ script:
   - mix test
 matrix:
   include:
-    - name: "Elixir 1.5.3 OTP 20.3.8"
-      elixir: 1.5.3
-      otp_release: 20.3.8
     - name: "Elixir 1.6.6 OTP 20.3.8"
       elixir: 1.6.6
       otp_release: 20.3.8
