--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: elixir
 git:
   depth: 3
 env:
-  - MIX_ENV=test && RUSTUP_HOME=/usr/local/rustup && CARGO_HOME=/usr/local/cargo && PATH=/usr/local/cargo/bin:$PATH && RUST_VERSION=1.39.0
+  - MIX_ENV=test && RUSTUP_HOME=~/rustup && CARGO_HOME=~/cargo && PATH=~/cargo/bin:$PATH && RUST_VERSION=1.39.0
 
 before_install:
   - wget -c https://static.rust-lang.org/rustup/archive/1.20.2/x86_64-unknown-linux-gnu/rustup-init
